<resources>
    <string name="app_name">AppFoody</string>
    <string name="version">Version</string>
    <string name="load_data">Loading...</string>
    <string name="company">T.D Group</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="or">Or</string>
    <string name="facebook_app_id">262456860894718</string>
    <string name="signinfb">Sign In With Facebook</string>
    <string name="signingg">Sign In With Google</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="signup"><u>Register</u></string>
    <string name="enterpass">Enter the password</string>
    <string name="resetpass">Reset Password</string>
    <string name="emailinput">Invites you to enter an email to recover your password</string>
    <string name="notmember">You not member?</string>
    <string name="sendmail">Send Mail</string>
    <string name="odau">Ở đâu</string>
    <string name="angi">Ăn gì?</string>
    <string name="danhmuc">Danh mục</string>
    <string name="moinhat">Mới nhất</string>
    <string name="khuvuc">Khu vực</string>
    <string name="near">Near by</string>
    <string name="order">Order delivery</string>
    <string name="game">Game and Fun</string>
    <string name="review">Review</string>
    <string name="blog">Blog</string>
    <string name="topmember">Top member</string>
    <string name="datmon">Đặt món</string>
    <string name="thich">Like</string>
    <string name="binhluan">Bình luận</string>
    <string name="diadiem">Check-in</string>
    <string name="mayanh">Tải ảnh</string>
    <string name="luulai">Lưu lại</string>
    <string name="chiase">Chia sẻ</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="chuamocua">Chưa mở cửa</string>
</resources>
