<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorBackgroundMain"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/group_tab_radio"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rd_moinhat"
            android:text="@string/moinhat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:background="@drawable/change_background_tab"
            android:textAlignment="center"
            android:checked="true"
            android:textColor="@drawable/change_text_tab_main"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundMain"/>
        <RadioButton
            android:id="@+id/rd_danhmuc"
            android:text="@string/danhmuc"
            android:layout_width="match_parent"
            android:button="@android:color/transparent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@drawable/change_text_tab_main"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:background="@drawable/change_background_tab"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundMain"/>
        <RadioButton
            android:id="@+id/rd_khuvuc"
            android:text="@string/khuvuc"
            android:layout_width="match_parent"
            android:button="@android:color/transparent"
            android:textAlignment="center"
            android:textColor="@drawable/change_text_tab_main"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:background="@drawable/change_background_tab"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </RadioGroup>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:layout_margin="3dp"
                    android:text="@string/near"
                    android:drawableLeft="@drawable/nearby"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:text="@string/order"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/order"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:text="@string/game"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:drawableLeft="@drawable/gameandfun"
                    android:textAllCaps="false"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:text="@string/review"
                    android:drawableLeft="@drawable/review"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:textAllCaps="false"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:text="@string/blog"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:drawableLeft="@drawable/blog"
                    android:textAllCaps="false"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="left|center"
                    android:text="@string/topmember"
                    android:drawableLeft="@drawable/user"
                    android:textAllCaps="false"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>