<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroundMain">
    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_camera_alt_white_24dp"
                android:text="@string/mayanh"
                android:textAllCaps="false"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorBlack"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_location_on_white_24dp"
                android:textAllCaps="false"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorBlack"
                android:text="@string/diadiem"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_comment_white_24dp"
                android:textAllCaps="false"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorBlack"
                android:text="@string/binhluan"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_bookmark_white_24dp"
                android:textAllCaps="false"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorBlack"
                android:text="@string/luulai"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_replay_white_24dp"
                android:textAllCaps="false"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorBlack"
                android:text="@string/chiase"
                android:layout_weight="1"/>
        </LinearLayout>
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestScroll_Chitiet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/colorAccent">
                    <ImageView
                        android:id="@+id/img_hinhanh_store_detail"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:src="@drawable/background"
                        android:scaleType="fitXY"/>
                    <TextView
                        android:id="@+id/tv_name_store_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gogi house"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="5dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/colorPrimaryDark"/>
                    <TextView
                        android:id="@+id/tv_address_store_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="123 abc"
                        android:paddingLeft="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBackgroundMain"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_tong_hinh_anh_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mayanh" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_tong_checkin_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/diadiem" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_tong_comment_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/binhluan" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_tong_luu_lai_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/luulai" />
                        </LinearLayout>

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBackgroundMain"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:padding="5dp">
                        <TextView
                            android:id="@+id/tv_time_store"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:text="7:00 - 20:00" />
                        <TextView
                            android:id="@+id/tv_mocua_dongcua_store"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Đang mở cửa"
                            android:textStyle="bold"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </LinearLayout>
                <include
                    layout="@layout/layout_tinhnang_chitietquanan"
                    />
                <include
                    layout="@layout/layout_binhluan_chitietquanan"
                    />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>